# Environmentally-Friendly-Weeding-and-Scarifying-Robot-Based-on-Intelligent-Recognition

./: README.md  pyproject.toml  requirements.txt
config/: README.md  default.yaml
scripts/: README.md  run_detection_demo.py  run_navigation_demo.py  train_detection.py
src/: README.md  __init__.py
src/control/: README.md  __init__.py  weed_control.py
src/detection/: README.md  __init__.py  inference.py
src/detection/models/: __init__.py  dgl_detr.py  fine_grained.py  incremental.py  lcinet.py  lightweight.py  multimodal.py
src/navigation/: README.md  __init__.py  dynamic_ridge.py  multispectral_fusion.py  navigator.py  ridge_detection.py  sensor_weight.py  trajectory_predictor.py
